Ajout du module stripe

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=EB+Garamond&family=Jost:wght@200&family=Playfair+Display&family=Vazirmatn:wght@100&display=swap" rel="stylesheet">
+  <script src="https://polyfill.io/v3/polyfill.min.js?version=3.52.1&features=fetch"></script>
 
+  <script src="https://js.stripe.com/v3/" async></script>
 </head>
 
 <body>
